# quality-coders

./: LICENSE  README.md
cpp/cpp_env_setup_vsc/: CMakeLists.txt  cpp_env_setup_vsc.code-workspace  main.cpp
cpp/cpp_env_setup_vsc/utils/: Adder.cpp  Adder.hpp  CMakeLists.txt
cpp/cpp_reference/: CMakeLists.txt  build_clang.sh  build_gcc.sh  contiguous_memory_space.cpp  identity.cpp  iterable.cpp  lazy_initialization.cpp  re_assignment.cpp  reference_collapsing.cpp  workspace.code-workspace
docker/cpp_env_setup_basic/: cpp_env_setup_basic
docker/cpp_env_setup_concrete_compiler_version/: cpp_env_setup_concrete_compiler_version
